--- a/app/src/main/res/layout-v23/profilepicselect_.xml
+++ b/app/src/main/res/layout-v23/profilepicselect_.xml
@@ -6,11 +6,12 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/removepic"
+        android:drawableTint="@color/red_500"
         android:drawableEnd="@drawable/delete"
         android:textColor="@color/red_400"
         style="@style/RobotoTextView"
         android:textAlignment="center"
-        android:text="@string/remover_foto_de_perfil"
+        android:text="Remover foto de perfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -27,7 +28,7 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/foto_atualizada"
+        android:text="Foto atualizada"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="12sp"
