--- a/app/src/main/res/layout/creators_card.xml
+++ b/app/src/main/res/layout/creators_card.xml
@@ -1,78 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    android:layout_margin="5dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:layout_margin="10dp"
+    android:background="@color/transparent"
+    app:cardCornerRadius="10dp">
     <RelativeLayout
-        android:layout_width="170dp"
-        android:layout_height="wrap_content">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <ImageView
+            android:contentDescription="@string/creator_pic"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:id="@+id/backgif"
-            android:layout_width="match_parent"
-            android:layout_height="110dp" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilepic"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="39dp"
-            android:src="@drawable/penguin"
-             app:civ_border_color="@color/white"
-            app:civ_border_width="1dp" />
-
+            android:layout_alignParentStart="true"
+            android:adjustViewBounds="true"
+            android:src="@drawable/penguin" />
         <LinearLayout
-            android:layout_below="@id/profilepic"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@id/profilepic"
+            android:background="@color/white"
             android:orientation="vertical">
 
             <TextView
-                android:textAlignment="center"
                 android:id="@+id/nome"
                 style="@style/AppTheme"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:text="nome"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <TextView
+                android:background="@drawable/bottom_line"
+                android:text="@string/username"
                 android:textAlignment="center"
-                android:id="@+id/cargo"
-                style="@style/AppTheme"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:text="cargo"
-                android:textColor="@color/grey_700"
+                android:textColor="@color/black"
                 android:textSize="18sp" />
 
             <TextView
-                android:autoLink="web"
+                android:id="@+id/cargo"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:text="@string/creator"
                 android:textAlignment="center"
-                android:textSize="14sp"
-                android:text="Encontre-me no linkedIn"
+                android:textColor="@color/grey_700"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:contentDescription="@string/linkedinbutton"
                 android:id="@+id/linkedin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/linkedin_hover"
-                android:textColor="@color/white"
-                android:clickable="true"
+                android:layout_gravity="bottom"
+                android:autoLink="web"
+                android:background="@color/transparent"
+                android:drawablePadding="4dp"
                 android:padding="4dp"
-                 android:drawablePadding="4dp"
+                android:src="@drawable/ic_linkedin_sign"
                 android:tint="@color/blue_600" />
 
 
@@ -80,6 +71,21 @@
 
 
     </RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/imagecard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="45dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
+
+
+    </android.support.v7.widget.CardView>
 
 
 </android.support.v7.widget.CardView>
