--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_margin="4dp"
+<LinearLayout android:id="@+id/back"
+    android:background="@drawable/bottom_line"
+    android:backgroundTint="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:elevation="2dp"
     android:layout_height="wrap_content">
   <TextView
+      android:layout_gravity="center"
       android:id="@+id/reference"
-      android:padding="5dp"
-      android:textSize="14sp"
-      style="@style/AppTheme"
-      android:clickable="true"
-      android:text="reference"
+      android:fontFamily="serif"
+      android:padding="10dp"
+      android:textColor="@color/black"
+      android:textSize="24sp"
+      android:text="@string/reference"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
 
