--- a/app/src/main/res/layout/fragment_newquote.xml
+++ b/app/src/main/res/layout/fragment_newquote.xml
@@ -11,46 +11,69 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         >
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:id="@+id/options"
-            android:elevation="2dp"
             android:background="@color/white"
+            android:orientation="vertical"
+            android:id="@+id/options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/colorlibrary"
-                android:padding="5dp"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="120dp">
 
             </android.support.v7.widget.RecyclerView>
             <RadioGroup
-                android:layout_gravity="end"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:id="@+id/categories"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:padding="3dp"
                 android:layout_height="wrap_content">
                 <RadioButton
-                    android:id="@+id/music"
-                    android:text="@string/m_sica"
+
+                    android:id="@+id/love"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/radio_button_love"
+                    android:button="@color/transparent"
+                    android:drawableStart="@drawable/ic_favorite_white_24dp"
+                    android:padding="5dp"
+                    android:text="@string/amor"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <RadioButton
+                    android:layout_margin="2dp"
+                    android:background="@drawable/radio_button_citation"
+                    android:button="@color/transparent"
+                    android:drawableStart="@drawable/ic_turned_in_black_24dp"
+                    android:padding="5dp"
+                    android:textColor="@color/white"
                     android:id="@+id/citation"
                     android:text="@string/cita_o"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <RadioButton
+                    android:layout_margin="2dp"
+                    android:background="@drawable/radio_button_motivation"
+                    android:button="@color/transparent"
+                    android:drawableStart="@drawable/ic_filter_vintage_black_24dp"
+                    android:padding="5dp"
+                    android:textColor="@color/white"
                     android:id="@+id/motivation"
                     android:text="@string/motiva_o"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <RadioButton
-                    android:id="@+id/love"
-                    android:text="@string/amor"
+                    android:id="@+id/music"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/radio_button_music"
+                    android:button="@color/transparent"
+                    android:drawableStart="@drawable/ic_music_note_black_24dp"
+                    android:padding="5dp"
+                    android:text="@string/m_sica"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RadioGroup>
@@ -58,125 +81,151 @@
 
 
         <LinearLayout
-               android:layout_below="@id/options"
-               android:layout_centerInParent="true"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/options"
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_margin="10dp"
+                android:animateLayoutChanges="true"
+                android:elevation="1dp"
+                android:hapticFeedbackEnabled="true"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="1dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/quotedata"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="3dp"
+                            android:animateLayoutChanges="true"
+                            android:padding="10dp">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:id="@+id/userpic"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:padding="5dp"
+                                    android:src="@drawable/penguin" />
+
+                                <TextView
+                                    android:id="@+id/username"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text="@string/username"
+                                    android:textColor="@color/black"
+                                    android:textSize="14sp" />
+
+                            </LinearLayout>
+
+                            <ImageButton
+                                android:id="@+id/menu"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerInParent="true"
+                                android:background="@color/transparent"
+                                android:src="@drawable/ic_more_vert_black_24dp"
+                                android:tint="@color/grey_800" />
 
 
-                   <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                       xmlns:app="http://schemas.android.com/apk/res-auto"
-                       android:id="@+id/card"
-                       android:hapticFeedbackEnabled="false"
-                       app:cardBackgroundColor="@color/white"
-                       android:layout_margin="15dp"
-                       app:cardCornerRadius="10dp"
-                       android:elevation="2dp"
-                       android:layout_width="match_parent"
-                       android:layout_gravity="center|top"
-                       android:layout_height="wrap_content"
-                       >
-                       <LinearLayout
-                           android:orientation="vertical"
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content">
-                           <LinearLayout
-                               android:background="@color/transparent"
-                               android:layout_margin="3dp"
-                               android:elevation="3dp"
-                               android:padding="10dp"
-                               android:layout_width="match_parent"
-                               android:layout_height="wrap_content">
-                               <de.hdodenhof.circleimageview.CircleImageView
-                                   android:id="@+id/userpic"
-                                   android:src="@drawable/penguin"
-                                   android:layout_width="50dp"
-                                   android:layout_height="50dp" />
+                        </RelativeLayout>
+                    </LinearLayout>
 
-                               <TextView
-                                   android:id="@+id/username"
-                                   android:padding="10dp"
-                                   android:text="@string/username"
-                                   android:textSize="16sp"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content" />
+                    <LinearLayout
+                        android:id="@+id/category"
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"
+                        android:background="@color/black"
+                        android:orientation="horizontal" />
 
-                           </LinearLayout>
-                           <LinearLayout
-                               android:background="@color/black"
-                               android:id="@+id/category"
-                               android:layout_width="match_parent"
-                               android:layout_height="5dp"
-                               android:orientation="horizontal" />
-                           <LinearLayout
-                               android:padding="25dp"
-                               android:orientation="vertical"
-                               android:id="@+id/background"
-                               android:layout_width="match_parent"
-                               android:layout_height="wrap_content">
-                               <EditText
-                                   android:typeface="normal"
-                                   android:backgroundTint="@color/transparent"
-                                   android:id="@+id/quote"
-                                   android:padding="5dp"
-                                   android:textAlignment="center"
-                                   android:textSize="18sp"
-                                   android:hint="@string/quote"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="wrap_content"
-                                   android:inputType="text" />
-                               <EditText
-                                   android:imeOptions="actionDone"
-                                   android:inputType="text"
-                                   android:typeface="normal"
-                                   android:backgroundTint="@color/transparent"
-                                   android:id="@+id/author"
-                                   android:padding="5dp"
-                                   android:textAlignment="textEnd"
-                                   android:textSize="16sp"
-                                   android:hint="@string/author"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="wrap_content" />
-                               <LinearLayout
-                                   android:orientation="horizontal"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content">
+                    <LinearLayout
 
-                               <TextView
-                                   android:visibility="invisible"
-                                   android:id="@+id/fontid"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content" />
-                               <TextView
-                                   android:visibility="invisible"
-                                     android:text="@string/_0"
-                                   android:id="@+id/texcolorid"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content" />
-                               <TextView
-                                   android:visibility="invisible"
-                                   android:text="@string/_0"
-                                    android:id="@+id/backcolorid"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content" />
-                               </LinearLayout>
+                        android:id="@+id/background"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="25dp">
 
-                           </LinearLayout>
+                        <EditText
+                            android:id="@+id/quote"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/transparent"
+                            android:hint="@string/quote"
+                            android:padding="5dp"
+                            android:textAlignment="center"
+                            android:textSize="24sp"
+                            android:typeface="normal" />
 
-                       </LinearLayout>
+                        <EditText
+                            android:id="@+id/author"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/transparent"
+                            android:hint="@string/author"
+                            android:padding="5dp"
+                            android:textAlignment="textEnd"
+                            android:textSize="20sp"
+                            android:typeface="normal" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/fontid"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/texcolorid"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/backcolorid"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:visibility="invisible" />
+                    </LinearLayout>
 
 
+                </LinearLayout>
 
 
+            </android.support.v7.widget.CardView>
 
 
-                   </android.support.v7.widget.CardView>
-
-
-
-
-           </LinearLayout>
+        </LinearLayout>
         <com.github.clans.fab.FloatingActionMenu
             android:id="@+id/material_design_android_floating_action_menu"
             android:layout_width="wrap_content"
@@ -211,9 +260,19 @@
             fab:menu_labels_textSize="15sp"
             fab:menu_openDirection="up"
 
-             >
+            >
 
-
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/categoryfab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/ic_close_white_24dp"
+                android:tint="@color/white"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_label="Nenhuma categoria"
+                fab:fab_size="mini" />
             <com.github.clans.fab.FloatingActionButton
                 app:fab_colorNormal="@color/colorPrimary"
                 app:fab_colorPressed="@color/colorPrimaryDark"
@@ -258,7 +317,6 @@
 
 
         </com.github.clans.fab.FloatingActionMenu>
-
 
     </RelativeLayout>
 
