--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/back"
-    android:background="@drawable/bottom_line"
+<LinearLayout android:background="@drawable/bottom_line"
     android:backgroundTint="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
