--- a/app/src/main/res/drawable/radio_button_love.xml
+++ b/app/src/main/res/drawable/radio_button_love.xml
@@ -2,15 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <corners android:radius="15dp" />
+            <corners android:radius="5dp" />
 
             <padding android:bottom="5dp" android:left="5dp" android:right="5dp" android:top="5dp" />
-            <solid android:color="@color/grey_400" />
+            <solid android:color="@color/lblack" />
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <corners android:radius="15dp" />
+            <corners android:radius="5dp" />
 
             <padding android:bottom="5dp" android:left="5dp" android:right="5dp" android:top="5dp" />
             <gradient android:angle="90" android:endColor="@color/red_600" android:startColor="@color/red_300" android:type="linear" />
