--- a/app/src/main/res/layout-v23/fragment_search.xml
+++ b/app/src/main/res/layout-v23/fragment_search.xml
@@ -49,6 +49,7 @@
             </LinearLayout>
 
             <android.support.design.widget.TabLayout
+                app:tabIndicatorHeight="2dp"
                 app:tabIndicatorColor="@color/white"
                 android:id="@+id/searchoptions"
                 android:layout_width="match_parent"
