--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container">
@@ -42,6 +41,7 @@
         app:elevation="10dp"
         app:fabSize="normal" />
     <com.github.mmin18.widget.RealtimeBlurView
+        app:realtimeOverlayColor="@color/transparent"
         app:realtimeBlurRadius="0dp"
         android:id="@+id/rootblur"
         android:layout_width="match_parent"
