--- a/app/src/main/res/layout/fragment_newquote.xml
+++ b/app/src/main/res/layout/fragment_newquote.xml
@@ -1,90 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
+    android:orientation="vertical"
     android:background="@color/transparent">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <RelativeLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:id="@+id/options"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/colorlibrary"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Toolbar
+                android:id="@+id/options"
                 android:layout_width="match_parent"
-                android:layout_height="120dp">
+                android:layout_height="wrap_content"
+                android:background="@color/white">
 
-            </android.support.v7.widget.RecyclerView>
-            <RadioGroup
-                android:id="@+id/categories"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:padding="3dp"
-                android:layout_height="wrap_content">
-                <RadioButton
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    android:id="@+id/love"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/radio_button_love"
-                    android:button="@color/transparent"
-                    android:drawableStart="@drawable/ic_favorite_white_24dp"
-                    android:padding="5dp"
-                    android:text="@string/amor"
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <RadioButton
-                    android:layout_margin="2dp"
-                    android:background="@drawable/radio_button_citation"
-                    android:button="@color/transparent"
-                    android:drawableStart="@drawable/ic_turned_in_black_24dp"
-                    android:padding="5dp"
-                    android:textColor="@color/white"
-                    android:id="@+id/citation"
-                    android:text="@string/cita_o"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <RadioButton
-                    android:layout_margin="2dp"
-                    android:background="@drawable/radio_button_motivation"
-                    android:button="@color/transparent"
-                    android:drawableStart="@drawable/ic_filter_vintage_black_24dp"
-                    android:padding="5dp"
-                    android:textColor="@color/white"
-                    android:id="@+id/motivation"
-                    android:text="@string/motiva_o"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <RadioButton
-                    android:id="@+id/music"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/radio_button_music"
-                    android:button="@color/transparent"
-                    android:drawableStart="@drawable/ic_music_note_black_24dp"
-                    android:padding="5dp"
-                    android:text="@string/m_sica"
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </RadioGroup>
-        </LinearLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/colorlibrary"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp">
 
+                    </android.support.v7.widget.RecyclerView>
 
+                    <RadioGroup
+                        android:id="@+id/categories"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="1dp">
+
+                        <RadioButton
+
+                            android:id="@+id/love"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="1dp"
+                            android:background="@drawable/radio_button_love"
+                            android:button="@color/transparent"
+                            android:drawableStart="@drawable/ic_favorite_white_24dp"
+                            android:padding="5dp"
+                            android:text="@string/amor"
+                            android:textColor="@color/white" />
+
+                        <RadioButton
+                            android:id="@+id/citation"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:background="@drawable/radio_button_citation"
+                            android:button="@color/transparent"
+                            android:drawableStart="@drawable/ic_turned_in_black_24dp"
+                            android:padding="5dp"
+                            android:text="@string/cita_o"
+                            android:textColor="@color/white" />
+
+                        <RadioButton
+                            android:id="@+id/motivation"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:background="@drawable/radio_button_motivation"
+                            android:button="@color/transparent"
+                            android:drawableStart="@drawable/ic_filter_vintage_black_24dp"
+                            android:padding="5dp"
+                            android:text="@string/motiva_o"
+                            android:textColor="@color/white" />
+
+                        <RadioButton
+
+                            android:id="@+id/music"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:background="@drawable/radio_button_music"
+                            android:button="@color/transparent"
+                            android:drawableStart="@drawable/ic_music_note_black_24dp"
+                            android:padding="5dp"
+                            android:text="@string/m_sica"
+                            android:textColor="@color/white" />
+                    </RadioGroup>
+                </LinearLayout>
+            </Toolbar>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/options"
-            android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -226,99 +239,101 @@
 
 
         </LinearLayout>
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/material_design_android_floating_action_menu"
+        </LinearLayout>
+
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/material_design_android_floating_action_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"
+        fab:menu_animationDelayPerItem="55"
+        fab:menu_backgroundColor="@android:color/transparent"
+        fab:menu_buttonSpacing="0dp"
+        fab:menu_colorNormal="@color/colorPrimary"
+        fab:menu_colorPressed="@color/colorPrimaryDark"
+        fab:menu_colorRipple="@color/white"
+        fab:menu_fab_label="Editor"
+        fab:menu_fab_size="normal"
+        fab:menu_icon="@drawable/ic_mode_edit_white_24dp"
+        fab:menu_labels_colorNormal="#333"
+        fab:menu_labels_colorPressed="#444"
+        fab:menu_labels_colorRipple="@color/white"
+        fab:menu_labels_cornerRadius="3dp"
+        fab:menu_labels_ellipsize="none"
+        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        fab:menu_labels_margin="0dp"
+        fab:menu_labels_maxLines="-1"
+        fab:menu_labels_padding="8dp"
+        fab:menu_labels_position="left"
+        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        fab:menu_labels_singleLine="false"
+
+        fab:menu_labels_textColor="@color/white"
+        fab:menu_labels_textSize="15sp"
+        fab:menu_openDirection="up">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/categoryfab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="11dp"
-            fab:menu_animationDelayPerItem="55"
-            fab:menu_backgroundColor="@android:color/transparent"
-            fab:menu_buttonSpacing="0dp"
-            fab:menu_colorNormal="@color/colorPrimary"
-            fab:menu_colorPressed="@color/colorPrimaryDark"
-            fab:menu_colorRipple="@color/white"
-            fab:menu_fab_label="Editor"
-            fab:menu_fab_size="normal"
-            fab:menu_icon="@drawable/ic_mode_edit_white_24dp"
-            fab:menu_labels_colorNormal="#333"
-            fab:menu_labels_colorPressed="#444"
-            fab:menu_labels_colorRipple="@color/white"
-            fab:menu_labels_cornerRadius="3dp"
-            fab:menu_labels_ellipsize="none"
-            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
-            fab:menu_labels_margin="0dp"
-            fab:menu_labels_maxLines="-1"
-            fab:menu_labels_padding="8dp"
-            fab:menu_labels_position="left"
-            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
-            fab:menu_labels_singleLine="false"
-            fab:menu_labels_textColor="@color/white"
-            fab:menu_labels_textSize="15sp"
-            fab:menu_openDirection="up"
+            android:background="@color/colorPrimary"
+            android:src="@drawable/ic_close_white_24dp"
+            android:tint="@color/white"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"
+            fab:fab_label="Nenhuma categoria"
+            fab:fab_size="mini" />
 
-            >
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/textcolorfab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:src="@drawable/ic_format_color_text_black_24dp"
+            android:tint="@color/white"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"
+            fab:fab_label="Cor do texto"
+            fab:fab_size="mini" />
 
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/categoryfab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:src="@drawable/ic_close_white_24dp"
-                android:tint="@color/white"
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorPrimaryDark"
-                fab:fab_label="Nenhuma categoria"
-                fab:fab_size="mini" />
-            <com.github.clans.fab.FloatingActionButton
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorPrimaryDark"
-                android:id="@+id/textcolorfab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_format_color_text_black_24dp"
-                fab:fab_label="Cor do texto"
-                android:background="@color/colorPrimary"
-                android:tint="@color/white"
-                fab:fab_size="mini" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/backcolorfab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_format_color_fill_white_24dp"
+            android:tint="@color/white"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"
+            fab:fab_label="Cor do plano de fundo"
+            fab:fab_size="mini" />
 
-            <com.github.clans.fab.FloatingActionButton
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorPrimaryDark"
-                android:tint="@color/white"
-                android:id="@+id/backcolorfab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_format_color_fill_white_24dp"
-                fab:fab_label="Cor do plano de fundo"
-                fab:fab_size="mini" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fontpickerfab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_font_download_black_24dp"
+            android:tint="@color/white"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"
+            fab:fab_label="Escolher fonte"
+            fab:fab_size="mini" />
 
-            <com.github.clans.fab.FloatingActionButton
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorPrimaryDark"                android:tint="@color/white"
-                android:id="@+id/fontpickerfab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_font_download_black_24dp"
-                fab:fab_label="Escolher fonte"
-                fab:fab_size="mini" />
-
-            <com.github.clans.fab.FloatingActionButton
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorPrimaryDark"                 android:id="@+id/salvar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_check_white_24dp"
-                fab:fab_label="Salvar"
-                fab:fab_size="mini" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/salvar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check_white_24dp"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"
+            fab:fab_label="Salvar"
+            fab:fab_size="mini" />
 
 
-        </com.github.clans.fab.FloatingActionMenu>
+    </com.github.clans.fab.FloatingActionMenu>
 
-    </RelativeLayout>
-
-
-</ScrollView>
+</RelativeLayout>
