--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -34,7 +34,7 @@
 
                 <EditText
                     android:textSize="22sp"
-                    android:inputType="textCapWords"
+                    android:inputType="text"
                     android:id="@+id/search"
                     android:drawableEnd="@drawable/ic_search_black_24dp"
                     android:backgroundTint="@color/transparent"
@@ -48,6 +48,8 @@
             </LinearLayout>
 
             <android.support.design.widget.TabLayout
+                app:tabIndicatorHeight="2dp"
+
                 app:tabIndicatorColor="@color/white"
                 android:id="@+id/searchoptions"
                 android:layout_width="match_parent"
