--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -266,6 +266,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="lwhite">#64ffffff</color>
+    <color name="lblack">#64050000</color>
     <color name="transparent">#00ffffff</color>
 
 
